@@ -42,6 +42,7 @@ int u_config_add_key(u_config_t *c, const char *key, const char *val);
 int u_config_set_key(u_config_t *c, const char *key, const char *val);
 
 int u_config_add_child(u_config_t *c, const char *key, u_config_t **pc);
+int u_config_set_value(u_config_t *c, const char *val);
 u_config_t* u_config_get_child_n(u_config_t *c, const char *key, int n);
 u_config_t* u_config_get_child(u_config_t *c, const char *key);
 
