@@ -1,6 +1,10 @@
-$Id: ChangeLog,v 1.20 2007/10/10 21:47:50 tho Exp $
+$Id: ChangeLog,v 1.21 2007/11/08 23:46:31 tat Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/kl/cont/gb/html/libu.html
+
+LibU ....:
+    - u_config_set_value's now in the public interface
+    - u_config_get_child_n can return anonymous keys
 
 LibU 1.1.0:
 	- [missing, misc] windows mingw fixes
